tests/suite/projects/fail/generated/missing_import_5/main.ny
//~ ERROR import not found
import "lib/missing5.ny"

fn main() {
    print(0)
}
